Work on achievement blocks

--- a/khyeras/_dev/styles/khyeras_v1/template/pages_achievements.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/pages_achievements.html
@@ -76,7 +76,7 @@
 										<i class="icon rpg-round-icon rpg-icon {{ detail.icon }}" aria-hidden="true"></i>
 									</div>
 									<p class="card-description">{{ detail.description }}</p>
-									<dl class="details">
+									<dl class="details details-small">
 										<dt>Requirements:</dt>
 										<dd>{{ detail.requirements }}</dd>
 										<dt>Rewards:</dt>
