Add achievement styles to light theme, fix discord logic

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_other-sections.scss
@@ -448,6 +448,44 @@ dl.faq {
 	}
 }
 
+/* Pages - Cards
+============================================== */
+
+.card-grid {
+	@include flex-flow(row wrap);
+	margin: 0 -10px;
+	.card-block {
+		width: 33.33%;
+		@include flex();
+		padding: 0 10px;
+		margin: 0 0 20px 0;
+		.rpg-icon-wrapper {
+			float: left;
+			clear: right;
+			padding: 0 15px 20px 0;
+		}
+		dl.details {
+			clear: both;
+		}
+		.card-completed-text {
+			margin: -10px 0 20px 0;
+			color: $color-04;
+			font-style: italic;
+			.icon {
+				margin: 0 5px 0 0;
+			}
+		}
+		&.card-completed {
+			.rpg-round-icon {
+				background: $color-10;
+			}
+			.card-description, dl.details {
+				opacity: 0.50;
+			}
+		}
+	}
+}
+
 /* Pages - Map
 ============================================== */
 
