--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
@@ -91,6 +91,22 @@
 	</li>
 	<li class="dropdown-container">
 		<div class="menu-label">
+			<a href="{BOARD_URL}gameplay" title="Gameplay" role="menuitem"><span>Gameplay</span></a>
+			<i class="icon icon-lg fa-chevron-down menu-trigger"></i>
+		</div>
+		<div class="dropdown">
+			<ul class="dropdown-contents" role="menu">
+				<li>
+					<a href="{BOARD_URL}leveling" title="Leveling" role="menuitem"><span>Leveling</span></a>
+				</li>
+				<li>
+					<a href="{BOARD_URL}achievements" title="Achievements" role="menuitem"><span>Achievements</span></a>
+				</li>
+			</ul>
+		</div>
+	</li>
+	<li class="dropdown-container">
+		<div class="menu-label">
 			{% set community_header %}
 				<a title="Community" role="menuitem"><span>Community</span></a>
 			{% endset %}
