--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -236,6 +236,9 @@
 	.card-grid .card-block {
 		width: 50%;
 	}
+	.leveling-chart .leveling-chart-column .topiclist > li dl dt.leveling-chart-level {
+		max-width: 70px;
+	}
 
 	// cp.scss
 	.cp-wrapper {
@@ -454,6 +457,18 @@
 	.excerpt, .excerpt-simple {
 		.excerpt-details .excerpt-title {
 			max-width: 68%;
+		}
+	}
+	.leveling-chart .leveling-chart-column {
+		width: 50%;
+		&:nth-child(even) {
+			order: 2;
+			.topiclist-header {
+				display: none;
+			}
+		}
+		.topiclist > li dl dt.leveling-chart-level {
+			max-width: 100px;
 		}
 	}
 
@@ -1024,6 +1039,12 @@
 			}
 		}
 	}
+	.leveling-chart .leveling-chart-column .topiclist > li dl {
+		display: flex;
+		dd {
+			display: block;
+		}
+	}
 
 	// cp.scss
 	.cp-main {
@@ -1584,6 +1605,18 @@
 	}
 	.section-page-map #tabs {
 		display: none;
+	}
+	.leveling-chart {
+		display: block;
+		.leveling-chart-column {
+			width: auto;
+			&:nth-child(3) .topiclist-header {
+				display: none;
+			}
+			.topiclist > li dl dt.leveling-chart-level {
+				max-width: none;
+			}
+		}
 	}
 
 	// cp.scss
