--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -597,12 +597,19 @@ dl.faq {
 ============================================== */
 
 .leveling-chart {
-	@include flex-flow(row nowrap);
+	overflow: hidden;
+	@include flex-flow(row wrap);
 	margin: 0 0 20px 0;
 	.leveling-chart-column {
-		@include flex(base);
-		.topiclist > li dl dt.leveling-chart-level {
-			max-width: 100px;
+		@include flex;
+		width: 25%;
+		.topiclist > li {
+			border-left: 1px dashed $color-01;
+			position: relative;
+			left: -1px;
+			dl dt.leveling-chart-level {
+				max-width: 100px;
+			}
 		}
 	}
 }
