--- a/khyeras/_dev/styles/khyeras_v1/template/custom/extra_breadcrumbs.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/extra_breadcrumbs.html
@@ -13,7 +13,7 @@
 
 {% set about_crumbs = [ 'app/rules', 'app/managing-your-account', 'app/getting-started' ] %}
 {% set lore_crumbs = [ 'app/history', 'app/short-history', 'app/timeline', 'app/glossary', 'app/magic' ] %}
-{% set gameplay_crumbs = [ 'app/achievements', 'app/leveling', 'app/quests' ] %}
+{% set gameplay_crumbs = [ 'app/achievements', 'app/leveling', 'app/currency', 'app/stats' ] %}
 
 {% set first_crumb = '' %}
 
