--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_other-sections.scss
@@ -599,18 +599,18 @@ dl.faq {
 /* Pages - Leveling
 ============================================== */
 
-.leveling-chart {
+.stat-chart {
 	overflow: hidden;
 	@include flex-flow(row wrap);
 	margin: 0 0 20px 0;
-	.leveling-chart-column {
+	.stat-chart-column {
 		@include flex;
 		width: 25%;
 		.topiclist > li {
 			border-left: 1px dashed $color-01;
 			position: relative;
 			left: -1px;
-			dl dt.leveling-chart-level {
+			dl dt.stat-chart-level {
 				max-width: 100px;
 			}
 		}
