--- a/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/custom/header_menu_01.html
@@ -7,13 +7,13 @@
 		<div class="dropdown">
 			<ul class="dropdown-contents" role="menu">
 				<li>
-					<a href="{BOARD_URL}rules" title="Rules" role="menuitem"><span>Rules</span></a>
+					<a href="{BOARD_URL}about-rules" title="Rules" role="menuitem"><span>Rules</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}managing-your-account" title="Managing Your Account" role="menuitem"><span>Managing Your Account</span></a>
+					<a href="{BOARD_URL}about-managing-your-account" title="Managing Your Account" role="menuitem"><span>Managing Your Account</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}getting-started" title="Getting Started" role="menuitem"><span>Getting Started</span></a>
+					<a href="{BOARD_URL}about-getting-started" title="Getting Started" role="menuitem"><span>Getting Started</span></a>
 				</li>
 				<li>
 					<a href="{U_FAQ}" title="{L_FORUM} {L_FAQ}" role="menuitem"><span>{L_FORUM} {L_FAQ}</span></a>
@@ -41,28 +41,28 @@
 		<div class="dropdown">
 			<ul class="dropdown-contents" role="menu">
 				<li>
-					<a href="{BOARD_URL}history" title="History" role="menuitem"><span>History</span></a>
+					<a href="{BOARD_URL}lore-history" title="History" role="menuitem"><span>History</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}timeline" title="Timeline" role="menuitem"><span>Timeline</span></a>
+					<a href="{BOARD_URL}lore-timeline" title="Timeline" role="menuitem"><span>Timeline</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}glossary" title="Glossary" role="menuitem"><span>Glossary</span></a>
+					<a href="{BOARD_URL}lore-glossary" title="Glossary" role="menuitem"><span>Glossary</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}races" title="Races" role="menuitem"><span>Races</span></a>
+					<a href="{BOARD_URL}lore-races" title="Races" role="menuitem"><span>Races</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}races-half-breed" title="Half-Breed" role="menuitem"><span>Half-Breed</span></a>
+					<a href="{BOARD_URL}lore-races-half-breed" title="Half-Breed" role="menuitem"><span>Half-Breed</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}religion" title="Religion" role="menuitem"><span>Religion</span></a>
+					<a href="{BOARD_URL}lore-religion" title="Religion" role="menuitem"><span>Religion</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}classes" title="Classes" role="menuitem"><span>Classes</span></a>
+					<a href="{BOARD_URL}lore-classes" title="Classes" role="menuitem"><span>Classes</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}magic" title="Magic" role="menuitem"><span>Magic</span></a>
+					<a href="{BOARD_URL}lore-magic" title="Magic" role="menuitem"><span>Magic</span></a>
 				</li>
 			</ul>
 		</div>
@@ -97,10 +97,16 @@
 		<div class="dropdown">
 			<ul class="dropdown-contents" role="menu">
 				<li>
-					<a href="{BOARD_URL}leveling" title="Leveling" role="menuitem"><span>Leveling</span></a>
+					<a href="{BOARD_URL}gameplay-leveling" title="Leveling" role="menuitem"><span>Leveling</span></a>
 				</li>
 				<li>
-					<a href="{BOARD_URL}achievements" title="Achievements" role="menuitem"><span>Achievements</span></a>
+					<a href="{BOARD_URL}gameplay-achievements" title="Achievements" role="menuitem"><span>Achievements</span></a>
+				</li>
+				<li>
+					<a href="{BOARD_URL}gameplay-stats" title="Stats" role="menuitem"><span>Stats</span></a>
+				</li>
+				<li>
+					<a href="{BOARD_URL}gameplay-currency" title="Currency" role="menuitem"><span>Currency</span></a>
 				</li>
 			</ul>
 		</div>
