--- a/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
+++ b/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
@@ -60,10 +60,10 @@
 					</div>
 					<div class="site-details flex-column">
 						<p class="introduction">
-							Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="{BOARD_URL}history">Read more...</a>
+							Freed from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveiled vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. <a class="read-more" href="{BOARD_URL}lore-history">Read more...</a>
 						</p>
 						<p>
-							The current year is <span class="year">448</span> and the season is fall. <a href="{BOARD_URL}timeline" class="read-more">Check here for Khy'eras' timeline.</a>
+							The current year is <span class="year">448</span> and the season is fall. <a href="{BOARD_URL}lore-timeline" class="read-more">Check here for Khy'eras' timeline.</a>
 						</p>
 					</div>
 				</div>
