Update achievements and fix broken urls

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_colors.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_colors.scss
@@ -23,6 +23,7 @@ $color-18: #a0b8e6; // platinum
 $color-19: #f7b900; // gold
 $color-20: #a9a9a9; // silver
 $color-21: #b26f30; // copper
+$color-22: #9c6837; // rpg icon brown
 
 // Color Sets
 // ============================================== //
