--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -779,6 +779,10 @@ dl.details {
 	font-size: rem(28px);
 }
 
+.rpg-round-icon-brown {
+	background: $color-22;
+}
+
 .rpg-round-icon-green {
 	background: $color-05;
 }
