--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
@@ -5,25 +5,25 @@ $color-00: #ededed; // main font
 $color-01: #15212c; // form headers, footer, image borders, read icon, button hover
 $color-02: #0d171b; // mobile menu, sticky nav, dropdown containers, attachbox, pre/code
 $color-03: #73abd0; // main link hover, sub-headers, icon-blue
-$color-04: #a4c27e; // main link, icon-green
-$color-05: #1c2f25; // buttons, tabs, rpg icon green, online ribbon, unread icon, poll bar
+$color-04: #a4c27e; // main link, icon green
+$color-05: #1c2f25; // buttons, tabs, icon bg green, online ribbon, unread icon, poll bar
 $color-06: #333333; // form fields fonts, notice/error font
 $color-07: #fcfcce; // browser upgrade, highlight, notices
-$color-08: #b13131; // notify badge, icon-red, rpg icon red, hot icon, chart remove, hp bar inner
+$color-08: #b13131; // notify badge, icon red, hot icon, chart remove, hp bar inner
 $color-09: #266296; // half-breed chart check, mp bar inner
-$color-10: #777777; // search-box icon, icon-gray
+$color-10: #777777; // search-box icon, icon gray
 $color-11: #aaaaaa; // disabled form field, search-box icon hover
-$color-12: #f19051; // icon-orange, star topic icon, rpg icon orange
-$color-13: #5e6c85; // icon-bluegray
-$color-14: #d6bf4c; // rpg icon yellow
-$color-15: #4d2e56; // rpg icon purple
+$color-12: #f19051; // icon orange, star topic icon
+$color-13: #5e6c85; // icon bluegray
+$color-14: #d6bf4c; // icon yellow
+$color-15: #4d2e56; // icon purple
 $color-16: #666666; // print.css main color
 $color-17: #73abd0; // topic mention, user colors
 $color-18: #a0b8e6; // platinum
 $color-19: #f7b900; // gold
 $color-20: #a9a9a9; // silver
 $color-21: #b26f30; // copper
-$color-22: #9c6837; // rpg icon brown
+$color-22: #9c6837; // icon brown
 
 // Color Sets
 // ============================================== //
