--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_viewlisting.scss
@@ -78,7 +78,7 @@
 					background: map-get($color-set-08, light-00);
 				}
 				&.fa-question {
-					background: map-get($color-set-03, light-00);
+					background: $color-01;
 				}
 			}
 			dl {
