--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
@@ -4,7 +4,7 @@
 $color-00: #ededed; // main font
 $color-01: #15212c; // form headers, footer, image borders, read icon, button hover
 $color-02: #0d171b; // mobile menu, sticky nav, dropdown containers, attachbox, pre/code
-$color-03: #73abd0; // main link hover, sub-headers, icon-blue
+$color-03: #73abd0; // main link hover, sub-headers, icon blue
 $color-04: #a4c27e; // main link, icon green
 $color-05: #1c2f25; // buttons, tabs, icon bg green, online ribbon, unread icon, poll bar
 $color-06: #333333; // form fields fonts, notice/error font
